# GameEngine

./: CMakeLists.txt  README.md  gameloop.cpp  gameloop.h  main.cpp
logic/: CMakeLists.txt  object.cpp  object.h
logic/eventhandler/: CMakeLists.txt  callbackhandler.h  eventhandler.h  functors.cpp  functors.h
types/: CMakeLists.txt  animation.cpp  bitmap.cpp  bone.cpp  color.cpp  mesh.cpp  quaternion.cpp  triangle.cpp  types.h  vector2.cpp  vector3.cpp  vector4.cpp  vertex.cpp
